--- a/www/css/geoportal.css
+++ b/www/css/geoportal.css
@@ -162,7 +162,7 @@ body {
     border: 1px solid gray;
 }
 .titulo-panel-propiedades {
-    background-color: #aebbc9;
+    background-color: #8c949c;
     color: white;
     font-size: 11px;
 }
@@ -180,6 +180,9 @@ body {
 }
 .etiqueta-subpanel-propiedades {
     padding-top:4px;
+}
+.titulo-subpanel-propiedades {
+    border: 1px solid gray;
 }
 
 .central {
@@ -229,6 +232,7 @@ body {
     text-shadow: none;
     background-color: rgba(255,255,255,0.9);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    z-index: 11000;
 }
 .iso-label {
     color:black;
