--- a/www/css/geoportal.css
+++ b/www/css/geoportal.css
@@ -245,3 +245,10 @@ body {
 .noUi-touch-area {
     background-color: #1779ba;
 }
+.hsplit {
+    height:6px;
+    background-color: #2c3e50;
+    cursor: ns-resize;
+    touch-action: none;
+    user-select: none;
+}
