--- a/www/css/geoportal.css
+++ b/www/css/geoportal.css
@@ -273,6 +273,13 @@ body {
     touch-action: none;
     user-select: none;
 }
+.vsplit {
+    width:6px;
+    background-color: #2c3e50;
+    cursor: ew-resize;
+    touch-action: none;
+    user-select: none;
+}
 
 .panel-agregar-objeto {
     top:50px;
