--- a/www/css/geoportal.css
+++ b/www/css/geoportal.css
@@ -143,6 +143,9 @@ body {
     font-size: 12px;    
     width: 100%
 }
+.activador-item {
+    cursor:pointer;
+}
 .seleccionador-item {
     cursor:pointer;
 }
